# YOLO_Web_Platform

./: .gitignore  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  LICENSE  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SCRIPTS.md  docker-compose.yml  restart.sh  start.sh  status.sh  stop.sh  區域網路訪問說明.md
backend/: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Makefile  NEXT_STEPS.md  README.md  ROADMAP.md  TODO.md  pyproject.toml  requirements-dev.txt  test_api.py
backend/src/yolo_api/: __init__.py  config.py  dependencies.py  exceptions.py  inference.py  logging_config.py  main.py  models.py  training.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_dependencies.py  test_exceptions.py  test_inference.py  test_logging.py  test_models.py  test_training.py
datasets/test-yolo-dataset/: generate_test_data.py
datasets/test-yolo-dataset/labels/: img_000.txt  img_001.txt  img_002.txt  img_003.txt  img_004.txt  img_005.txt  img_006.txt  img_007.txt  img_008.txt  img_009.txt
docs/: ANNOTATION_GUIDE.md  WebSocket問題診斷報告.md  WebSocket重連測試指南.md  YOLO_Web_Platform_Design.md  整合完成總結.md  端到端測試報告.md
frontend/: .env.example  CHANGELOG.md  DEBUG_EXPORT.md  Dockerfile  PERSISTENCE_UNDO_REDO.md  README.md  ROADMAP.md  TESTING_GUIDE.md  TEST_SUMMARY.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  verify-build.sh
frontend/.parcel-cache/: lock.mdb  snapshot-6d8d1f4afb85e335.txt
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts  constants.ts  db.ts  exportDataset.ts
frontend/src/pages/: Annotation.tsx  Dataset.tsx  Docs.tsx  Home.tsx  Inference.tsx  Monitor.tsx  Settings.tsx  Training.tsx
frontend/src/stores/: annotationStore.ts  annotationStore.ts.backup  datasetStore.ts  trainingStore.ts
tests/: test_end_to_end.py
(+11 files in other folders)
